syntax = "proto3";

option csharp_namespace = "GermonenkoBy.Contacts.Api";

package greet;

import "google/protobuf/timestamp.proto";

message CreateContactRequest {
  string first_name = 1;
  string last_name = 2;
  string phone_number = 3;
  repeated string emails = 4;
  optional int32 assignee_id = 10;
  bool mark_as_activity = 11;
}

message ContactEmailResponse {
  string email = 1;
  google.protobuf.Timestamp created_date = 2;
  google.protobuf.Timestamp last_used_date = 3;
}

message ContactResponse {
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string phone_number = 4;
  google.protobuf.Timestamp created_date = 5;
  optional google.protobuf.Timestamp updated_date = 6;
  optional google.protobuf.Timestamp last_activity_date = 7;
  optional google.protobuf.Timestamp deleted_date = 8;
  repeated ContactEmailResponse emails = 10;
  optional int32 assignee_id = 20;
}

service ContactsService {
  rpc CreateContact(CreateContactRequest) returns (ContactResponse);
}
